修改文章分类和分类的slug替换

--- a/content/Tools/pelican/01.pelican-basic.rst
+++ b/content/Tools/pelican/01.pelican-basic.rst
@@ -3,9 +3,10 @@ Pelican(一) —— 基本理解
 ~~~~~~~~~~~~~~~~~~~~~~~~~~
 
 :date: 2016-05-03 19:38
+:category: 工具
 :tags: pelican, blog
 :slug: pelican-basic
-:summary: 介绍Pelican的用途(说明)，目录结构和逻辑结构。       
+:summary: 介绍Pelican的用途(说明)，目录结构和逻辑结构。
 
 Pelican有什么用
 ---------------
