--- a/content/tools/01.pip-config.rst
+++ b/content/tools/01.pip-config.rst
@@ -4,6 +4,7 @@ python包管理系统——pip的设置
 
 :date: 2016-05-11 15:00
 :category: 工具
+:tags: pip, python, package management
 :slug: configure-pip
 :summary: pip是 pypa_ 推荐的python包安装工具，作为包管理工具，就像debian的apt一
           样，应该都可以自定义安装源，以加快包的下载速度。
